--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
+
 [project]
 name = "aqi-hub"
 version = "0.1.0"
-description = "Add your description here"
+description = "Air quality index hub"
+authors = [
+    {name = "Water Ghost", email = "maxlee1991zyz@gmail.com"},
+]
 readme = "README.md"
 requires-python = ">=3.13"
-license = "MIT"
-license-files = ["LICEN[CS]E*"]
+keywords = ["aqi", "air quality"]
 
 dependencies = []
 
@@ -18,3 +21,10 @@ dev = [
     "pytest>=8.3.4",
     "ruff>=0.9.7",
 ]
+
+[tool.setuptools]
+license-files = ["LICENSE"]
+
+[build-system]
+requires = ["setuptools", "wheel", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
