--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,7 +116,10 @@ jobs:
         name: python-package-distributions
         path: dist/
     - name: Publish distribution 📦 to TestPyPI
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         repository-url: https://test.pypi.org/legacy/
-        token: ${{ secrets.TEST_PYPI_API_TOKEN }}  # Use the secret here
+        
