--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [project]
 name = "aqi-hub"
-version = "0.1.0"
+version = "0.1.3.dev0"
 description = "Air quality index hub"
 authors = [
     {name = "Water Ghost", email = "maxlee1991zyz@gmail.com"},
