--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,9 +49,12 @@ jobs:
         name: python-package-distributions
         path: dist/
     - name: Publish distribution 📦 to PyPI
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        token: ${{ secrets.PYPI_API_TOKEN }}
+    #   with:
+    #     token: ${{ secrets.PYPI_API_TOKEN }}
 
   github-release:
     name: >-
