--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,17 +53,17 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       uses: pypa/gh-action-pypi-publish@release/v1
-    #   with:
-    #     token: ${{ secrets.PYPI_API_TOKEN }}
+      with:
+        token: ${{ secrets.PYPI_API_TOKEN }}
 
   github-release:
     name: >-
       Sign the Python 🐍 distribution 📦 with Sigstore
       and upload them to GitHub Release
+    if: !startsWith(github.ref, 'refs/tags/')  # only sign and upload to GitHub Release on non-tag pushes
     needs:
     - publish-to-pypi
     runs-on: ubuntu-latest
-
     permissions:
       contents: write  # IMPORTANT: mandatory for making GitHub Releases
       id-token: write  # IMPORTANT: mandatory for sigstore
