--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on: push
+on:
+    push:
+        branches:
+            - main
 
 jobs:
   build:
@@ -53,8 +56,6 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       uses: pypa/gh-action-pypi-publish@release/v1
-    #   with:
-    #     token: ${{ secrets.PYPI_API_TOKEN }}
 
   github-release:
     name: >-
