--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,11 +28,16 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install MkDocs and Material
-        run: pip install mkdocs mkdocs-material
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
+      - name: Install dependencies
+        run: uv sync --frozen --group dev
 
       - name: Build site
-        run: mkdocs build --strict
+        run: uv run mkdocs build --strict
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
