--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ Issues = "https://github.com/caiyunapp/aqi-hub/issues"
 
 [dependency-groups]
 dev = [
-    "mkdocs>=1.6.1",
+    "mkdocs>=1.6.1,<2",
     "mkdocs-material>=9.7.3",
     "mike>=2.0",
     "pytest",
