--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,9 +4,10 @@
 
 name: Deploy GitHub Pages
 
+# 推送到 develop 时部署为版本 "develop"，可访问 /develop/ 预览
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "develop"]
     tags: ["v*"]
   workflow_dispatch:
 
@@ -53,6 +54,10 @@ jobs:
           uv run mike delete latest --push --ignore-remote-status 2>/dev/null || true
           uv run mike deploy latest --push --update-aliases
           uv run mike set-default latest --push
+
+      - name: Deploy develop (on develop branch，预览用，不修改默认版本)
+        if: github.ref == 'refs/heads/develop'
+        run: uv run mike deploy develop --push --update-aliases
 
       - name: Deploy version (on tag v*)
         if: startsWith(github.ref, 'refs/tags/v')
